# SecurIT

./: CMakeLists.txt  speaker.cpp  test1
database/: data.csv
database/s0/: 0.pgm  1.pgm  2.pgm  3.pgm  31.pgm  32.pgm  33.pgm  4.pgm
database/s1/: 28.pgm  29.pgm  30.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
database/s2/: 10.pgm  11.pgm  12.pgm  13.pgm  14.pgm  31.pgm  32.pgm  33.pgm
database/s3/: 15.pgm  16.pgm  17.pgm  18.pgm  19.pgm  42.pgm  43.pgm  44.pgm
database/s4/: 20.pgm  21.pgm  22.pgm  23.pgm  24.pgm  25.pgm  26.pgm  27.pgm
database/s5/: 34.pgm  35.pgm  36.pgm  37.pgm  38.pgm  39.pgm  40.pgm  41.pgm
database/unknown/: latestImage.pgm
include/: core.h
src/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Compteur_recup.py  DartConfiguration.tcl  Makefile  blinkLED  cmake_install.cmake  ledRGB.py  main.cpp  mainTest.cpp  prediction.cpp  securit2-compteur.json  speaker.cpp  test.cpp  try.cpp  wait.cpp
src/audio/: speaker.py
src/files/examples/: example_enroll.py  example_generaterandom.py  example_index.py  example_search.py
